add error dialog for no browser installed

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -575,4 +575,5 @@
     <string name="welcome_feature_8_text">Play your animated GIF images</string>
     <string name="welcome_feature_9_title">Upload picture from camera</string>
     <string name="welcome_feature_9_text">Take a picture and upload it directly to your server</string>
+    <string name="no_borwser_installed_alert">No browser installed. Please install a Browser in order to allow a secure login.</string>
 </resources>
