--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="recommend_subject">"Try %1$s on your smartphone!"</string>
     <string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
 
+    <string name="auth_failure_snackbar">Authentication failed</string>
+    <string name="auth_failure_snackbar_action">Change account</string>
     <string name="auth_check_server">Check server</string>
     <string name="auth_host_url">Server address https://…</string>
     <string name="auth_username">Username</string>
