--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -408,6 +408,9 @@
     <string name="log_send_mail_subject">%1$s Android app logs</string>
     <string name="log_progress_dialog_text">Loading data &#8230;</string>
 
+    <string name="actionbar_select_all">Select all</string>
+    <string name="actionbar_deselect_all">Deselect all</string>
+
     <string name="saml_authentication_required_text">Authentication required</string>
     <string name="saml_authentication_wrong_pass">Wrong password</string>
     <string name="actionbar_move">Move</string>
