Code review fixes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -412,7 +412,7 @@
     <string name="actionbar_select_inverse">Select inverse</string>
 
     <string name="saml_authentication_required_text">Authentication required</string>
-    <string name="saml_authentication_wrong_pass">W ong password</string>
+    <string name="saml_authentication_wrong_pass">Wrong password</string>
     <string name="actionbar_move">Move</string>
     <string name="file_list_empty_moving">Nothing in here. You can add a folder!</string>
     <string name="folder_picker_choose_button_text">Choose</string>
